[tool.poetry]
name = "ast"
version = "0.1.0"
description = ""
authors = ["LUJ0618 <uijong2201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10, <3.10"
matplotlib = "3.4.2"
numpy = "1.20.3"
scikit-learn = "0.24.2"
llvmlite = "0.36.0"
numba = "0.53.1"
scipy = "1.6.3"
sklearn = "0.0"
timm = "0.4.5"
torch = "1.8.1"
torchaudio = "0.8.1"
wget = "3.2"
zipp = "3.4.1"
torchvision = "0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
